# ainds

./: CMakeLists.txt  README  build.sh
src/: CMakeLists.txt  ainds_ns.h
src/neuralnet/: neuralnet_ns.h
src/neuralnet/abstract/: layer.cpp  layer.h  neuralnet.cpp  neuralnet.h  neuron.cpp  neuron.h
src/neuralnet/hopfield/: hopfieldlayer.cpp  hopfieldlayer.h  hopfieldneuralnet.cpp  hopfieldneuralnet.h  hopfieldneuron.cpp  hopfieldneuron.h
src/neuralnet/hopfield/chaos/: chaoshopfieldlayer.cpp  chaoshopfieldlayer.h  chaoshopfieldneuralnet.cpp  chaoshopfieldneuralnet.h  chaoshopfieldneuron.cpp  chaoshopfieldneuron.h
src/tests/: main.cpp
src/tools/: tools_ns.h
src/tools/matrix/: matrix.cpp  matrix.h
